syntax = "proto3";
package protowire;

import "rpc.proto";

message KaspadRequest {
  oneof payload {
    NotifyBlockAddedRequestMessage notifyBlockAddedRequest = 1007;
    GetBlockRequestMessage getBlockRequest = 1025;
  }
}

message KaspadResponse {
  oneof payload {
    NotifyBlockAddedResponseMessage notifyBlockAddedResponse = 1008;
    GetBlockResponseMessage getBlockResponse = 1026;
  }
}

service RPC {
  rpc MessageStream (KaspadRequest) returns (KaspadResponse) {}
}
